# pdf-extractor-with-regex

./: .env-example  Makefile  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/: __init__.py  extractor_text_pdf.py  pdf_viz.py  table_pdf_extractor.py
src/configs/rules/: notas.py
src/configs/tools/: postgre.py  queue.py
src/configs/tools/aws/: s3.py  sqs.py
