[tool.poetry]
name = "pdf-extractor-with-regex"
version = "0.1.0"
description = ""
authors = ["Rafael Panegassi <rm.panegassi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.0"
camelot-py = "^1.0.0"
opencv-python = "^4.11.0.86"
loguru = "^0.7.3"
matplotlib = "^3.10.3"
ghostscript = "^0.7"
pandas = "^2.2.3"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.40"
unidecode = "^1.4.0"
pypdf2 = "^3.0.1"
black = "^25.1.0"
isort = "^6.0.1"
schedule = "^1.2.2"
pytz = "^2025.2"
boto3 = "^1.38.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
